# freeswitch_rust

./: .gitmodules  CI.nix  Cargo.toml  README.md  default.nix  dev.nix  shell.nix
.github/workflows/: build.yml
freeswitch_rs/: Cargo.toml
freeswitch_rs/src/: channel.rs  event.rs  frame.rs  fslog.rs  lib.rs  modules.rs  session.rs  utils.rs
freeswitch_rs_macros/: Cargo.toml
freeswitch_rs_macros/src/: lib.rs
freeswitch_sys/: Cargo.toml  build.rs
freeswitch_sys/include/: wrapper.h
freeswitch_sys/src/: lib.rs
mod_audio_forkrs/: Cargo.toml
mod_audio_forkrs/src/: lib.rs
mods/mod_audio_forkrs/: Cargo.toml
mods/mod_audio_forkrs/src/: lib.rs
mods/mod_hello_world/: Cargo.toml
mods/mod_hello_world/src/: lib.rs
mods/mod_wsfork/: Cargo.toml  test.txt
mods/mod_wsfork/mod_wsfork/: Cargo.toml
mods/mod_wsfork/mod_wsfork/src/: arg_parse.rs  audio_fork.rs  lib.rs  mod_wsfork_api.rs
mods/mod_wsfork/src/: audio_fork.rs  lib.rs
mods/mod_wsfork/wsfork_events/: Cargo.toml
mods/mod_wsfork/wsfork_events/src/: lib.rs
mods/utils/ws/: Cargo.toml
mods/utils/ws/src/: ws.rs
nix/: bindgen.nix
scripts/: Dockerfile
tools/generate-schema/: Cargo.toml
tools/generate-schema/src/: main.rs
tools/ws_test/: Cargo.toml
tools/ws_test/src/: main.rs
