[package]
name = "mod_wsfork"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freeswitch_sys = { path = "../../freeswitch_sys" }
freeswitch_rs = { path = "../../freeswitch_rs" }
ws = { path ="../utils/ws"}
clap = { version = "4.5.21", features = ["derive"]} 
anyhow = "1.0.92"
