[package]
name = "ws_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
